[tool.poetry]
name = "developing web applications with python"
version = "0.1.0"
description = ""
authors = ["Yakovishin Timofey"]
readme = "README.md"
packages = [
	{ include = "flasky" }
]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
